Modernize code: use Stream.toList()